restaurant-website/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Roboto", sans-serif;
}

/* Headings */
h1 {
  font-weight: 400;
}
h1 a {
  text-decoration: none;
  color: inherit;
}

/* Positioning & Sizes (Flex, width, height, padding, margins) */
html, body {
  height: 100%;
}
body {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}
main {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
}
.gallery-main, .about-main {
  display: flex;
  flex-direction: column;
}
.about-main {
  align-items: stretch;
  padding: 30px 0px;
}
.gallery-main {
  margin-top: 5vh;
}
.menu-category {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.nav-list li {
  display: inline; /* Ensures the list items are displayed inline */
}
.nav-list a {
  padding: 0 10px; /* Adjust padding as needed */
}
/* Button styles */
button, .submit {
  width: 250px;
  height: 90px;
  padding: 16px;
  border: none;
  background-color: #525252;
  color: white;
  border-radius: 5px;
  margin-left: 20px;
  margin-right: 20px;
  margin-top: 10px;
  cursor: pointer;
}
button:hover, .submit:hover {
  background-color: #626262;
}
button:active, .submit:active {
  background: #727272;
}
.light-mode {
  background-color: rgb(191, 191, 191)
}
.light-mode:hover {
  background-color: rgb(175, 175, 175)
}
.light-mode:active {
  background-color: rgb(159, 159, 159)
}
#mode-switch {
  width: 300px;
  height: 75px;
  font-size: 28px;
}
#prev, #next {
  background: rgb(40, 40, 40);
}
#prev:hover, #next:hover {
  background: rgb(50, 50, 50);;
}
#prev:active, #next:active {
  background: rgb(60, 60, 60);;
}
.submit {
  margin: auto;
  margin-top: 30px;
}
@media screen and (max-width: 480px) {
  .book-form {
    width: 90vw;
  }
  .book-form label,
  .book-form select,
  .book-form input[type=datetime-local],
  .book-form button {
    display: block;
    width: 75%;
    margin: auto;
    margin-bottom: 10px;
  }
  input, textarea {
    max-width: 80vw;
  }
}
.header-body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: #121212;
  color: white;
}
iframe {
  border: none;
}
iframe {
  width: 100%;
  height: 100%;
}
h1 {
  text-align: center;
  padding: 10px;
  margin-top: 30px;
}
nav {
  text-align: center;
  margin-bottom: 50px;
}
nav a {
  padding: 50px;
  text-decoration: none;
}
.nav-list {
  display: flex;
  flex-direction: row;
  justify-content: center;
  list-style-type: none;
  flex-wrap: wrap;
}
.book-form {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}
.message-form {
  display: flex;
  flex-direction: column;
}
.inputs {
  display: flex;
  flex-direction: row;
  align-items: center;
  flex-wrap: wrap;
  justify-content: center;
}
.inputs div {
  margin: 10px;
}
.name-and-email {
  display: flex;
  flex-direction: column;
}
.message {
  display: flex;
  flex-direction: column;
}
.form {
  display: flex;
  flex-direction: column;
  align-items: center;
}
fieldset {
  margin-top: 20px;
  margin-bottom: 20px;
}
.book-form {
  max-width: 750px;
  margin: 20px;
  padding: 25px 50px;
  border-radius: 5px;
}
.book-form label,
.book-form select,
.book-form input[type=datetime-local],
.book-form button {
  display: block;
  width: 100%;
  margin-bottom: 10px;
}

/* Table cell spacing */
@media screen and (min-height: 1440px) {
  td {
    padding: 5px 10px;
  }
}
@media screen and (max-height: 1439px) {
  td {
    padding: 0px 5px;
  }
}

/* Background images */ 
/* How to blur background image only */
.index-body::after {
  content: "";
  background-image: url('images/restaurant.jpg');
  background-size: cover;
  filter: blur(1px);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
}

/* Font Sizes */
h1 {
  font-size: 45px;
}
h2 {
  font-size: 50px;
  margin-top: 20px;
}  
button, .submit, a button {
  font-size: 36px;
}
label, select, input {
  font-size: 30px;
}
nav {
  font-size: 30px;
}
p, tr, td {
  font-size: 25px;
}

/* Colours & Decoration */
h1, nav a {
  color: white;
}
.nav-list li a {
  color: white;
}
footer p {
  color: white;
  width: 100%;
}
a {
  color: skyblue;
  text-decoration: none;
}
body:not(.header-body) {
  background-color: #171717;
  color: white;
}

/* Header */
header {
  background-color: #121212;
  width: 100%;
}

/* Form */
.book-form {
  background: rgb(34, 34, 34);
  border: none;
}
.book-form fieldset {
  border: none;
  margin: 0;
  padding: 0;
}
.book-form label {
  margin-bottom: 5px;
  color: white;
}
.book-form select,
.book-form input[type=datetime-local] {
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 5px;
  background-color: #fff;
}
label {
  text-align: left;
}
textarea {
  width: 500px;
  resize: none;
}


/* Margins */
@media screen and (min-width: 2560px) {
  p, h2 {
    margin-left: 0.8vw;
    margin-right: 0.8vw;
  }
  p {
    margin-bottom: 0.4vh;
  }
  h2 {
    margin-bottom: 0.7vh;
  }
  section {
    margin-bottom: 1.4vh;
  }  
}
@media screen and (max-width: 2559px) {
  p, section {
    margin: 0px;
  }
}

input, textarea {
  background-color: #a4d8ff;
}
input:hover, textarea:hover {
  background-color: #80c8ff;
}
@media screen and (max-width: 1080px) {
  #menu-button, #contact-button {
    display: none;
  }
}

img {
  object-fit: cover;
  background-size: cover;
}
.menu-image {
  height: 30vh;
  min-width: 250px;
  max-height: 250px;
}

/* Excluding gallery figcaptions */
figcaption {
  font-size: 18px;
}
@media screen and (min-width: 960px) {
  figcaption {
    font-size: 22px;
  }
}

/* Carousel */
.carousel {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  margin: 20px;
}
.carousel div.active {
  filter: none;
}
.carousel img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.carousel div {
  width: 12vw;
  height: 28vh;
  min-width: 300px;
  min-height: 350px;
  margin: 20px 10px;
  filter: blur(2px);
}
.carousel div figcaption {
  font-size: 22px;
}
.carousel div.active figcaption {
  font-size: 30px;
}
@media screen and (min-width: 1890px) {
  .carousel div.active {
    filter: none;
    width: 16vw;
    height: 37vh;
    min-width: 200px;
    min-height: 400px;
  }
}

@media screen and (max-width: 1889px) {
  .carousel div, .carousel div.active{
    filter: none;
    width: 12vw;
    height: 28vh;
  }
  #prev, #next {
    display: none;
  }
  .carousel div.active figcaption {
    font-size: 22px;
  }
}

/* Widths */
section {
  max-width: 1280px;
  max-width: 85%;
}
.about-main {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.menu-body {
  margin: auto;
  width: 100%;
}

/* Menu text sizes */
.menu-main h2 {
  font-size: 3vh;
}
.menu-main td {
  font-size: 2vh;
}
@media screen and (max-height: 1000px) {
  .menu-main h2 {
    font-size: 30px;
  }
  .menu-main td {
    font-size: 20px;
  }
  
}

.menu-body {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.menu-main {
  max-width: 1536px;
  padding: 10px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}
figcaption {
  max-width: 100%;
  margin: 0 2vw;
  text-align: center;
}

.menu-category {
  width: 25%; /* Adjust width as needed */
  min-width: 270px;
  margin-bottom: 1vh; /* Adjust margin as needed */
  margin-top: 1vh;
}


/* Footer */
footer {
  background: #121212;
  color: white;
  font-size: 1.3rem;
  padding: 2vh;
  text-align: center;
  margin-top: 1vh;
  width: 100%;
}

